--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -7,6 +7,10 @@
         <SwitchPreference
             android:key="enabled"
             android:title="@string/enabled_title" />
+        <Preference
+            android:key="ConnectionStatus"
+            android:title="@string/lyricsGetterStatus_title"
+            android:summary="false"/>
         <io.baolong24.statuslyricext.preferences.PackageListPreference
             android:title="@string/ignored_apps_title"
             android:key="ignored_packages"
