URL错位,及添加 StatusBarLyricExt 的链接

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -24,6 +24,9 @@
             android:key="app"
             android:title="@string/app_name" />
         <Preference
+            android:key="app"
+            android:title="StatusBarLyricExt" />
+        <Preference
             android:key="lyricview"
             android:title="LyricView" />
     </PreferenceCategory>
