--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -8,14 +8,21 @@
             android:key="enabled"
             android:title="@string/enabled_title" />
         <Preference
-            android:key="ConnectionStatus"
+            android:key="connection_status"
             android:title="@string/lyricsGetterStatus_title"
             android:summary="false"/>
-        <io.baolong24.statuslyricext.preferences.PackageListPreference
+        <statusbar.finder.preferences.PackageListPreference
             android:title="@string/ignored_apps_title"
             android:key="ignored_packages"
             android:dependency="enabled" />
     </PreferenceCategory>
+
+    <PreferenceCategory android:title="Provider">
+        <EditTextPreference
+            android:key="musixmatch_token"
+            android:title="musixmatch_token"/>
+    </PreferenceCategory>
+
 
     <PreferenceCategory android:title="@string/about_header"
         android:key="about">
@@ -24,7 +31,7 @@
             android:key="app"
             android:title="@string/app_name" />
         <Preference
-            android:key="app"
+            android:key="statusbarlyricext"
             android:title="StatusBarLyricExt" />
         <Preference
             android:key="lyricview"
