--- a/app/src/main/res/color-night-v31/settingslib_switch_track_on.xml
+++ b/app/src/main/res/color-night-v31/settingslib_switch_track_on.xml
@@ -15,6 +15,6 @@
     limitations under the License.
   -->
 
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android" tools:ignore="MissingDefaultResource">
     <item android:color="@android:color/system_accent2_500" android:lStar="51" />
 </selector>
