尝试性添加图标

--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+
     <path
         android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M54.6,75.89l-5.31-5.31c-0.42,0.34-0.91,0.6-1.45,0.8c-0.55,0.2-1.13,0.29-1.75,0.29 c-1.53,0-2.82-0.53-3.88-1.59s-1.59-2.35-1.59-3.88c0-1.53,0.53-2.82,1.59-3.88c1.06-1.06,2.35-1.59,3.88-1.59 c1.53,0,2.82,0.53,3.88,1.59c1.06,1.06,1.59,2.35,1.59,3.88c0,0.62-0.1,1.2-0.29,1.75c-0.2,0.55-0.46,1.03-0.8,1.45l5.31,5.31 L54.6,75.89z M46.1,70c1.05,0,1.95-0.37,2.68-1.11c0.74-0.74,1.11-1.63,1.1-2.68c0-1.05-0.37-1.95-1.11-2.68s-1.63-1.11-2.68-1.1 c-1.05,0-1.95,0.37-2.68,1.11c-0.74,0.74-1.11,1.63-1.1,2.68c0,1.05,0.37,1.95,1.11,2.68S45.05,70,46.1,70z" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M60.57,32.11H30.25v5.05h30.32V32.11z M60.57,42.21H30.25v5.05h30.32V42.21z M30.25,57.37h20.21v-5.05H30.25 V57.37z M65.62,32.11v20.67c-0.78-0.28-1.64-0.45-2.53-0.45c-4.19,0-7.58,3.39-7.58,7.58s3.39,7.58,7.58,7.58s7.58-3.39,7.58-7.58 V37.16h7.58v-5.05H65.62z" />
 </vector>
