--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -11,6 +11,9 @@
             android:key="connection_status"
             android:title="@string/lyricsGetterStatus_title"
             android:summary="false"/>
+        <SwitchPreference
+            android:key="trans"
+            android:title="原译双层歌词 仅限简中墨息用户" />
         <statusbar.finder.preferences.PackageListPreference
             android:title="@string/ignored_apps_title"
             android:key="ignored_packages"
