--- a/app/src/main/res/drawable-v24/ic_statusbar_icon.xml
+++ b/app/src/main/res/drawable-v24/ic_statusbar_icon.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
+        android:width="108dp"
+        android:height="108dp"
+        android:viewportWidth="108"
+        android:viewportHeight="108">
 
     <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M54.88,93l-9.45-9.45c-0.75,0.6-1.61,1.07-2.59,1.42c-0.97,0.35-2.01,0.53-3.11,0.53 c-2.72,0-5.03-0.94-6.92-2.83s-2.83-4.19-2.83-6.92c0-2.72,0.94-5.03,2.83-6.92S37,66,39.73,66c2.73,0,5.03,0.94,6.92,2.83 c1.89,1.89,2.83,4.19,2.83,6.92c0,1.1-0.17,2.14-0.53,3.11c-0.35,0.97-0.82,1.84-1.42,2.59l9.45,9.45L54.88,93z M39.73,82.5 c1.88,0,3.47-0.66,4.78-1.97c1.31-1.31,1.97-2.91,1.97-4.78c0-1.88-0.66-3.47-1.97-4.78C43.2,69.65,41.6,69,39.73,69 c-1.88,0-3.47,0.66-4.78,1.97c-1.31,1.31-1.97,2.91-1.97,4.78c0,1.88,0.66,3.47,1.97,4.78C36.26,81.85,37.85,82.5,39.73,82.5z" />
+            android:fillColor="#FFFFFF"
+            android:pathData="M54.8,100.2L43.5,89c-0.9,0.7-1.9,1.3-3.1,1.7c-1.2,0.4-2.4,0.6-3.7,0.6c-3.2,0-5.9-1.1-8.2-3.3 c-2.2-2.2-3.3-5-3.3-8.2s1.1-5.9,3.3-8.2c2.2-2.2,5-3.4,8.2-3.4s5.9,1.1,8.2,3.3c2.2,2.2,3.3,5,3.3,8.2c0,1.3-0.2,2.5-0.6,3.7 c-0.4,1.2-0.9,2.1-1.7,3.1l11.2,11.1L54.8,100.2z M36.8,87.7c2.2,0,4.1-0.8,5.7-2.4c1.5-1.5,2.4-3.4,2.4-5.7c0-2.2-0.8-4.1-2.4-5.7 c-1.5-1.5-3.4-2.4-5.7-2.4c-2.2,0-4.1,0.8-5.7,2.4c-1.5,1.5-2.4,3.4-2.4,5.7c0,2.2,0.8,4.1,2.4,5.7C32.8,86.9,34.5,87.7,36.8,87.7z" />
     <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M65.5,15h-54v9h54V15z M65.5,33h-54v9h54V33z M11.5,60h36v-9h-36V60z M74.5,15v36.81 C73.11,51.32,71.58,51,70,51c-7.47,0-13.5,6.03-13.5,13.5S62.53,78,70,78s13.5-6.03,13.5-13.5V24H97v-9H74.5z" />
+            android:fillColor="#FFFFFF"
+            android:pathData="M67.3,7.8H3.4v10.7h63.9V7.8z M67.3,29.1H3.4v10.7h63.9V29.1z M3.4,61.1H46V50.4H3.4V61.1z M78,7.8v43.6 c-1.7-0.6-3.4-0.9-5.3-0.9c-8.9,0-16,7.1-16,16s7.1,16,16,16s16-7.1,16-16V18.5h16V7.8H78z" />
 </vector>
