--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -9,4 +9,8 @@
         <item>reply</item>
         <item>reply_all</item>
     </string-array>
+
+    <string-array name="xposed_scope">
+        <item>com.android.systemui</item>
+    </string-array>
 </resources>
