--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -16,8 +16,8 @@
             android:title="原译文双层歌词"
             android:summary="仅供简中 墨•息 用户。"/>
         <statusbar.finder.preferences.PackageListPreference
-            android:title="@string/ignored_apps_title"
-            android:key="ignored_packages"
+            android:title="@string/target_apps_title"
+            android:key="target_packages"
             android:dependency="enabled" />
     </PreferenceCategory>
 
